fix(android): support API 26 native lifecycle